# user-profile

./: Dockerfile  pyproject.toml  pytest.ini  release.config.js  run.py  sonar-project.properties  tox.ini
.github/workflow/: ci.yml
.github/workflows/: ci.yml  docker_hub.yml  integration_tests.yml
tests/integration/: test_block_profile.py  test_follow_profile.py  test_update_profile.py  test_view_profile.py
tests/unit/: test_block_profile.py  test_update_profile.py
user_profile_service/: __init__.py  config.py  database.py  routes.py  routes_utils.py  run.py
user_profile_service/models/: __init__.py  enums.py
user_profile_service/services/: consumer_service.py  profile_service.py
user_profile_service/views/: __init__.py
